@@ -43,6 +43,11 @@ typedef uint16_t u16;
 typedef uint32_t u32;
 typedef uint64_t u64;
 
+typedef int8_t  i8;
+typedef int16_t i16;
+typedef int32_t i32;
+typedef int64_t i64;
+
 // timer
 
 #if defined (_WIN)
@@ -1857,6 +1862,9 @@ typedef struct device_info
   int     kernel_loops_dev;
   int     kernel_threads_dev;
   int     vector_width_dev;
+  int     salt_pos_dev;
+  int     innerloop_pos_dev;
+  int     iteration_pos_dev;
 
 } device_info_t;
 
